--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,16 @@
   padding: 0;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.main-content {
+  padding-top: 80px; /* Ajustamos el espacio según la altura del navbar */
+}
+
 body.dark {
   background-color: black;
   color: white;
@@ -49,3 +59,30 @@ button:hover {
   transition: transform 0.25s;
 }
 
+
+/* ____________APP______________ */
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 1000;
+}
+
+.content {
+  flex: 1; /* Utiliza flex para que ocupe todo el espacio disponible */
+  padding-top: 50px; /* Asegura que el contenido no se solape con el navbar */
+}
+
+.footer {
+  margin-top: auto; /* Empuja el footer hacia abajo para que esté en la parte inferior */
+  background-color: #f0f0f0; /* Color de fondo del footer, ajusta según tu diseño */
+  padding: 20px; /* Ajusta el relleno según sea necesario */
+}
