--- a/src/pages/styles/homePage.css
+++ b/src/pages/styles/homePage.css
@@ -1,83 +1,95 @@
 .homepage {
-    padding-top: 78px;
+    padding-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.homepage > button {
+  }
+  
+  .homepage > button {
     margin-left: auto;
     margin-right: 20px;
     display: none;
-}
-
-.homepage__filters {
-    /* background-color: gray;
-    border-radius: 15px; */
+  }
+  
+  .homepage__filters {
     padding: 20px;
     position: fixed;
     top: 100px;
     left: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     gap: 10px;
-}
-
-.homepage__filters > button:first-child {
-    align-self: self-end;
+    background-color: #fff;
+    border-right: 1px solid #ddd;
+  }
+  
+  .homepage__filters > button:first-child {
+    align-self: flex-end;
     display: none;
-}
-
-.homepage__search {
+  }
+  
+  .homepage__search {
     width: 100%;
     display: flex;
     justify-content: center;
-}
-
-.homepage__search input {
+    margin: 20px 0;
+  }
+  
+  .homepage__search input {
     width: 80%;
-}
-
-.homepage__container {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-right: 10px;
+  }
+  
+  .homepage__search button {
+    background-color: #ff3f6c;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .homepage__container {
     display: flex;
     padding: 20px 20px 20px 250px;
     flex-wrap: wrap;
     justify-content: space-evenly;
     gap: 20px;
-}
-
-@media (width < 850px) {
+  }
+  
+  @media (width < 850px) {
     .homepage > button {
-        display: inline-block;
+      display: inline-block;
     }
-
+  
     .homepage > button.active {
-        visibility: hidden;
+      visibility: hidden;
     }
-
+  
     .homepage__filters {
-        z-index: 10;
-        width: 250px;
-        background-color: rgb(157, 157, 157);
-        border-radius: 15px;
-        left: 100%;
-        transition: left 0.42s;
+      z-index: 10;
+      width: 250px;
+      background-color: #fff;
+      border-radius: 15px;
+      left: 100%;
+      transition: left 0.42s;
     }
-
+  
     .homepage__filters.active {
-        left: calc(100% - 250px);
-        transition: left 0.4s;
+      left: calc(100% - 250px);
+      transition: left 0.4s;
     }
-
+  
     .homepage__filters > button:first-child {
-        display: inline-block;
+      display: inline-block;
     }
-
+  
     .homepage__container {
-        padding: 20px;
+      padding: 20px;
     }
-
-
-}
-
+  }
+  
